# bank-auto-voice

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build.yml
res/: license.txt  setup-instructions.txt  setup.iss
src/: main.rs  mb.rs  menu.rs  panic_catching.rs
src/mods/: config.rs  logger.rs  mb.rs  menu.rs  mod.rs
