[package]
name = "BankAutoVoice"
version = "1.0.0"
edition = "2021"
authors = ["MewTheDev"]
build = "build.rs"

[[bin]]
name = "BankAutoVoice"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
urlencoding = "2.1.3"
